calibre-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: calibre
        image: crocodilestick/calibre-web-automated:V3.1.2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "600Mi"
          requests:
            cpu: "100m"
            memory: "300Mi"
        ports:
        - containerPort: 8083
        volumeMounts:
        - name: config
          mountPath: /config
        - name: books
          mountPath: /calibre-library
#       Ingest Directory, for automatic addition to library
#        - name: cw-ingest
#          mountPath: /cwa-book-ingest
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: books
        persistentVolumeClaim:
          claimName: books-pvc
